--- a/public/test.html
+++ b/public/test.html
@@ -24,7 +24,7 @@
     <button onclick="Read()">确定</button>
     <br>
     <canvas id="map" style="margin-left:20px;border:1px solid #000;margin-top:10px;float:left"></canvas>
-    <div class="result" id="r1">
+    <div class="result" id="r1" style="height:300">
         <b>多边形弧段表</b>
         <br>
         <br>
