--- a/public/Compression.html
+++ b/public/Compression.html
@@ -9,17 +9,14 @@
 <body>
     <a>添加地图   </a>
     <a>选择输入文件：</a><input type="file" id="file" style="width: 200px;" />
-    <select style="height:25px;margin-right: 20px" id="type1">
-        <option value="mercator">兰伯特投影</option>
-    </select>
     <button onclick="ShowMap()" style="height:27px;width:60px;">显示</button>
     <br>
     <a>压缩数据   </a>
-    <a>输入压缩等级：</a>
+    <a>输入阈值：</a>
     <input id="number" style="height: 21px; width: 88px;"/>
     <button onclick="CutDown=true;ShowMap()" style="height:27px;width:90px;margin-top: 6px;">压缩并显示</button>
-    <a style="margin-left:18px">压缩率：</a>
-    <a id="result" style="color: red">未压缩</a>
+    <a style="margin-left:18px">压缩率</a>
+    <a id="result" style="color: black"></a>
     <canvas id="map" style="border:1px solid #000;margin-top:5px;"></canvas>
     <script>
         var canvas = document.getElementById('map');
@@ -153,7 +150,7 @@
                 }
                 else {
                     ShowData(newdata);
-                    document.getElementById('result').innerText = "未压缩";
+                    document.getElementById('result').innerText = "0";
                 }
                 CutDown = false;
             }
